<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_nav_menu_reminders"
        android:icon="@mipmap/ic_message_text"
        android:orderInCategory="1"
        android:title="@string/reminders"
        />
    <item
        android:id="@+id/item_nav_menu_favorites"
        android:icon="@mipmap/ic_star"
        android:orderInCategory="2"
        android:title="@string/favorites" />
    <item
        android:id="@+id/item_nav_menu_archive"
        android:icon="@mipmap/ic_archive"
        android:orderInCategory="3"
        android:title="@string/archive" />
    <item
        android:id="@+id/item_nav_menu_settings"
        android:icon="@mipmap/ic_settings"
        android:orderInCategory="4"
        android:title="@string/settings" />
    <item
        android:id="@+id/item_nav_menu_reference"
        android:icon="@mipmap/ic_account_card_details"
        android:orderInCategory="5"
        android:title="@string/reference" />

</menu>